<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">聊烧</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="say_something">说点什么</string>
    <string name="onekeylogin">一键登录</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="kiding">逗比</string>
    <string name="poolgay">穷比</string>
    <string name="are_you_fuck_sure_do_not_chat">你他喵确定不聊了吗？</string>
    <string name="papa_do_not_chat">是</string>
    <string name="not_sure">不</string>
    <string name="wait_a_moment">别撸太快，小心强撸灰飞烟灭！</string>
    <string name="you_fuck_do_not_write_send_jj">你不写字发个diao毛</string>
    <string name="finding1">正在找喇个寂寞的人儿，点我停止查找。</string>
    <string name="finding2">正在找喇个寂寞的人儿，点图停止查找。</string>
    <string name="why_click_me">点我干嘛？我让你点图啊！</string>
    <string name="chat_send_txt">发送</string>
    <string name="chat_cancle_txt">取消</string>
    <string name="your_JJ_so_short">你太短小了！</string>
    <string name="dont_chose_fail">千万不要选错哦~</string>
    <string name="Camera">拍照</string>
    <string name="Album">相册</string>
    <string name="beijua">悲剧啊！</string>
    <string name="resend_message">啊咧？发送失败！重发？</string>
    <string name="resend_btn">重发</string>
    <string name="cancle_send_btn">取消</string>
    <string name="des">　　点击首页中间的笑脸，进入等待，如果匹配到聊天对象，即进入聊天界面。\n　　再次点击首页中间笑脸，退出等待。\n　　本软件除正常统计软件使用情况以外，不会保留任何用户主动输入的聊天信息。请及时做好截屏、笔记、要微信、要电话的准备哟。拒绝黄、赌、毒从我做起，么么哒~\n　　最终解释权归兵蜀黍所有。</string>
    <string name="guaiwolo">网络有些不稳定，重连中。。。</string>
    <string name="help_and_shuoming">帮助和说明</string>
    <string name="yoursex">你的性别</string>
    <string name="boring_pintu">无聊的拼图</string>
    <string name="chat_list_title">聊了个天</string>
    <string name="go_away_ad">闪开！我要弹广告啦！！！</string>
    <string name="i_will_come_back">广告弹出失败。。。我还会再来的。。</string>
    <string name="please_check_sdcard">请检查是否安装存储卡!</string>
    <string name="jatengying">まるで加藤鹰手速よ！\n够了！</string>
    <string name="aleardy_neweast">もう最新バージョンました！\n已经是最新版了！</string>
    <string name="u_have_a_new_message">您有一条新消息</string>
    <string name="are_you_sure_clear_all">确定要清空所有记录吗？清空了就再也找不回来了。</string>
    <string name="are_you_sure_clear_this">确定要清空这条记录吗？清空了就再也找不回来了。</string>
    <string name="pingbi">屏蔽</string>
    <string name="yipingbi">已屏蔽</string>
    <string name="be_vip">成为会员</string>
    <string name="can_not_reset">注意！选择后将无法修改！</string>
    <string name="synchronization">正在同步用户数据，请稍后...</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="close">关闭</string>
    <string name="fuck_alien">服务器被外星人绑架了</string>
    <string name="ohno">Oh!No!</string>
    <string name="what_the_fuck">what the f**k</string>
    <string name="error_net">网络连接失败</string>
    <string name="retry">重试</string>
    <string name="saving">正在保存</string>
    <string name="saving_error">保存失败</string>
    <string name="saving_success">保存成功</string>
    <string name="no_vip_message">你并不是会员，哈哈哈哈哈哈！！！</string>
    <string name="become_vip">成为会员</string>
    <string name="become_diaosi">好吧</string>
    <string name="radio">录像</string>
    <string name="no_save_radio">退出后视频不会保存哦~</string>
    <string name="exit">退出</string>
    <string name="radio_renzheng">视频认证</string>
    <string name="u_have_n_message">您有N条未读消息</string>
    <string name="girl_god">女神认证</string>
    <string name="message_history">聊天记录</string>
    <string name="upload_fail">上传失败</string>
    <string name="uploading">正在上传</string>
    <string name="upload_succes">上传成功</string>
    <string name="editing">正在修改</string>
    <string name="edit_success">修改成功</string>
    <string name="edit_fail">修改失败</string>
    <string name="unable_recoding_liangchen">你他喵禁用了录音权限？\n视频和录音都不能用了。\n良辰望你，三思而后行。</string>
    <string name="loading">骚等片刻</string>
    <string name="pei_liao">伴聊</string>

    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="preference_user_avatar">preference_user_avatar</string>
    <string name="preference_user_album">preference_user_album</string>
    <string name="preference_user_age">preference_user_age</string>
    <string name="preference_user_area">preference_user_area</string>
    <string name="preference_user_name">preference_user_name</string>
    <string name="preference_user_gender">preference_user_gender</string>
    <string name="preference_user_coin">preference_user_coin</string>
    <string name="preference_user_zhifubao">preference_user_zhifubao</string>
    <string name="preference_user_weixin">preference_user_weixin</string>
    <string name="preference_user_description">preference_user_description</string>
    <string name="nickname">昵称</string>
    <string name="avatar">头像</string>
    <string name="edit_user_info">编辑资料</string>
    <string name="gender">性别</string>
    <string name="desc">个性签名</string>
    <string name="album">相册</string>
    <string name="age">年龄</string>
    <string name="birthday">生日</string>
    <string name="area">地区</string>
    <string name="coin">烧币</string>
    <string name="支付宝" />
    <string name="weixin">微信账号</string>
    <string name="zhifubao">支付宝账号</string>
    <string name="unbind">未绑定</string>
    <string name="tixian">充值/提现</string>
    <string name="your_album">你的相册</string>
    <string name="chose_picture">选择照片</string>
    <string name="create_chat_room">创建聊天室</string>
    <string name="location_fail">定位湿了个败</string>
    <string name="danteng_chat_with_yourself">闲的蛋疼得要跟自己聊天了么？</string>
    <string name="sex_not">性别不符</string>
    <string name="heng">哼</string>
    <string name="heng_timeout">哼！时间超了！</string>
    <string name="my_money">我的烧币</string>
    <string name="no_money_method">余额不够了。。。咋办？</string>
    <string name="suanle">算了</string>
    <string name="go_chongzhi">充值啊</string>
    <string name="pay_detail">烧币明细</string>
    <string name="chat_request">聊天请求</string>
</resources>
