<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:layout="@layout/preference_category_widget">
        <Preference
            android:icon="@drawable/default_logo"
            android:key="@string/preference_user_avatar"
            android:layout="@layout/preference_item_horizontal_icon"
            android:title="@string/avatar" />
        <Preference
            android:key="@string/preference_user_album"
            android:layout="@layout/preference_item_horizontal_icon_small"
            android:title="@string/album" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preference_category_widget">
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/preference_user_name"
            android:layout="@layout/preference_item_horizontal"
            android:title="@string/nickname" />
        <Preference
            android:key="@string/preference_user_gender"
            android:layout="@layout/preference_item_horizontal"
            android:summary="@string/boy"
            android:title="@string/gender" />
        <Preference
            android:key="@string/preference_user_age"
            android:layout="@layout/preference_item_horizontal"
            android:summary="22"
            android:title="@string/age" />
        <Preference
            android:key="@string/preference_user_area"
            android:layout="@layout/preference_item_horizontal"
            android:summary="北京 朝阳"
            android:title="@string/area" />
        <EditTextPreference
            android:key="@string/preference_user_description"
            android:layout="@layout/preference_item_vertical"
            android:summary="呵呵呵呵呵呵"
            android:title="@string/desc" />
    </PreferenceCategory>

    <PreferenceCategory android:layout="@layout/preference_category_widget">
        <Preference
            android:key="@string/preference_user_coin"
            android:layout="@layout/preference_item_vertical"
            android:widgetLayout="@layout/preference_item_coin"
            android:summary="¥0"
            android:title="@string/coin" />
        <EditTextPreference
            android:key="@string/preference_user_zhifubao"
            android:layout="@layout/preference_item_horizontal"
            android:summary="@string/unbind"
            android:title="@string/zhifubao" />
        <EditTextPreference
            android:key="@string/preference_user_weixin"
            android:layout="@layout/preference_item_horizontal"
            android:summary="@string/unbind"
            android:title="@string/weixin" />
    </PreferenceCategory>

</PreferenceScreen>